# msv-filter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: aa_alphabet.hpp  dp_matrix.hpp  hmmer_types.hpp  mock_data.hpp  profile.hpp
src/: aa_alphabet.cpp  main.cpp
tests/: CMakeLists.txt  stub_msv.cpp  test_msv_basic.cpp  test_msv_edge_cases.cpp  test_vectors.hpp
